Replace padding var with spacing to fix #79

--- a/src/blocks/media/scss/editor.scss
+++ b/src/blocks/media/scss/editor.scss
@@ -59,6 +59,6 @@
 }
 
 .novablocks-media .wp-block-group__inner-container {
-	padding-left: var(--novablocks-media-padding);
-	padding-right: var(--novablocks-media-padding);
+	padding-left: var(--novablocks-media-spacing);
+	padding-right: var(--novablocks-media-spacing);
 }
